--- a/package/win32/etc/blockem.conf
+++ b/package/win32/etc/blockem.conf
@@ -1,3 +1,9 @@
+﻿<?xml version="1.0"?>
+<!DOCTYPE blockem_config [
+<!ELEMENT blockem_config (language)>
+<!ELEMENT language (#PCDATA)>
+]>
+
 <blockem_config>
   <!-- 
     This is the language blockem will use at startup. If it is changed
