--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -73,7 +73,8 @@ am_blockem_OBJECTS = bitwise.$(OBJEXT) blockem_challenge.$(OBJEXT) \
 	gui_about_dialog.$(OBJEXT) gui_drawing_area_board.$(OBJEXT) \
 	gui_drawing_area_show_pieces.$(OBJEXT) \
 	gui_game_statusbar.$(OBJEXT) gui_game1v1_config.$(OBJEXT) \
-	gui_game1v1_config_dialog.$(OBJEXT) gui_main_window.$(OBJEXT) \
+	gui_game1v1_config_dialog.$(OBJEXT) \
+	gui_game1v1_widget.$(OBJEXT) gui_main_window.$(OBJEXT) \
 	gui_main_window_worker_thread.$(OBJEXT) \
 	gui_table_edit_piece.$(OBJEXT) gui_stop_watch_label.$(OBJEXT) \
 	heuristic.$(OBJEXT) piece.$(OBJEXT) player.$(OBJEXT) \
@@ -306,6 +307,8 @@ gui_game1v1_config.cpp \
 gui_game1v1_config.h \
 gui_game1v1_config_dialog.cpp \
 gui_game1v1_config_dialog.h \
+gui_game1v1_widget.cpp \
+gui_game1v1_widget.h \
 gui_glade_defs.h \
 gui_main_window.cpp \
 gui_main_window.h \
@@ -419,6 +422,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_exception.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_game1v1_config.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_game1v1_config_dialog.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_game1v1_widget.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_game_statusbar.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_main_window.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_main_window_worker_thread.Po@am__quote@
