new game dialog integration started. Integration with main window still missing

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -88,14 +88,16 @@ game_challenge.h \
 game_total_allocation.cpp \
 game_total_allocation.h \
 g_blocking_queue.h \
-gui_exception.cpp \
-gui_exception.h \
 gui_about_dialog.cpp \
 gui_about_dialog.h \
+gui_dialog_newgame.cpp \
+gui_dialog_newgame.h \
 gui_drawing_area_board.h \
 gui_drawing_area_board.cpp \
 gui_drawing_area_show_pieces.cpp \
 gui_drawing_area_show_pieces.h   \
+gui_exception.cpp \
+gui_exception.h \
 gui_game_challenge_widget.cpp \
 gui_game_challenge_widget.h \
 gui_game_total_allocation_widget.cpp \
