--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -70,9 +70,9 @@ PROGRAMS = $(bin_PROGRAMS)
 am_blockem_OBJECTS = bitwise.$(OBJEXT) blockem_challenge.$(OBJEXT) \
 	blockem_config.$(OBJEXT) board.$(OBJEXT) game1v1.$(OBJEXT) \
 	game_challenge.$(OBJEXT) game_total_allocation.$(OBJEXT) \
-	gui_exception.$(OBJEXT) gui_about_dialog.$(OBJEXT) \
+	gui_about_dialog.$(OBJEXT) gui_dialog_newgame.$(OBJEXT) \
 	gui_drawing_area_board.$(OBJEXT) \
-	gui_drawing_area_show_pieces.$(OBJEXT) \
+	gui_drawing_area_show_pieces.$(OBJEXT) gui_exception.$(OBJEXT) \
 	gui_game_challenge_widget.$(OBJEXT) \
 	gui_game_total_allocation_widget.$(OBJEXT) \
 	gui_game1v1_config.$(OBJEXT) \
@@ -299,14 +299,16 @@ game_challenge.h \
 game_total_allocation.cpp \
 game_total_allocation.h \
 g_blocking_queue.h \
-gui_exception.cpp \
-gui_exception.h \
 gui_about_dialog.cpp \
 gui_about_dialog.h \
+gui_dialog_newgame.cpp \
+gui_dialog_newgame.h \
 gui_drawing_area_board.h \
 gui_drawing_area_board.cpp \
 gui_drawing_area_show_pieces.cpp \
 gui_drawing_area_show_pieces.h   \
+gui_exception.cpp \
+gui_exception.h \
 gui_game_challenge_widget.cpp \
 gui_game_challenge_widget.h \
 gui_game_total_allocation_widget.cpp \
@@ -428,6 +430,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/game_challenge.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/game_total_allocation.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_about_dialog.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_dialog_newgame.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_drawing_area_board.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_drawing_area_show_pieces.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_exception.Po@am__quote@
