--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -74,6 +74,7 @@ am_blockem_OBJECTS = bitwise.$(OBJEXT) blockem_challenge.$(OBJEXT) \
 	gui_drawing_area_board.$(OBJEXT) \
 	gui_drawing_area_show_pieces.$(OBJEXT) gui_exception.$(OBJEXT) \
 	gui_game_challenge_widget.$(OBJEXT) \
+	gui_game_total_allocation_config.$(OBJEXT) \
 	gui_game_total_allocation_widget.$(OBJEXT) \
 	gui_game1v1_config.$(OBJEXT) \
 	gui_game1v1_config_dialog.$(OBJEXT) \
@@ -311,6 +312,8 @@ gui_exception.cpp \
 gui_exception.h \
 gui_game_challenge_widget.cpp \
 gui_game_challenge_widget.h \
+gui_game_total_allocation_config.cpp \
+gui_game_total_allocation_config.h \
 gui_game_total_allocation_widget.cpp \
 gui_game_total_allocation_widget.h \
 gui_game1v1_config.cpp \
@@ -438,6 +441,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_game1v1_config_dialog.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_game1v1_widget.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_game_challenge_widget.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_game_total_allocation_config.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_game_total_allocation_widget.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_main_window.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_main_window_worker_thread.Po@am__quote@
