--- a/Makefile.in
+++ b/Makefile.in
@@ -311,8 +311,11 @@ m4/ChangeLog \
 pixmaps/blockemicon.ico    \
 pixmaps/blockemlogo128.png \
 pixmaps/blockemlogo16.png  \
+pixmaps/blockemlogo32.xpm  \
 pixmaps/blockemlogo48.png  \
-pixmaps/blockemlogo.png
+pixmaps/blockemlogo.png    \
+pixmaps/game1vs1.png       \
+pixmaps/gametotalalloc.png
 
 
 # Note pixmapsdir contains @PACKAGE@. This must be taken into account
@@ -325,8 +328,11 @@ pixmaps_DATA = \
 pixmaps/blockemicon.ico    \
 pixmaps/blockemlogo128.png \
 pixmaps/blockemlogo16.png  \
+pixmaps/blockemlogo32.xpm  \
 pixmaps/blockemlogo48.png  \
-pixmaps/blockemlogo.png
+pixmaps/blockemlogo.png    \
+pixmaps/game1vs1.png       \
+pixmaps/gametotalalloc.png
 
 ACLOCAL_AMFLAGS = -I m4
 all: config.h
