--- a/package/debian/usr/share/applications/blockem.desktop
+++ b/package/debian/usr/share/applications/blockem.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Name=Blockem
 Comment=The GNU polyominoes board game
-Exec=/usr/local/bin/blockem
-Icon=/usr/local/share/blockem/pixmaps/blockemlogo32.xpm
+Exec=/usr/bin/blockem
+Icon=/usr/share/blockem/pixmaps/blockemlogo32.xpm
 Terminal=false
 Type=Application
 Categories=GNOME;GTK;Game;BoardGame;
