--- a/Makefile.in
+++ b/Makefile.in
@@ -14,7 +14,6 @@
 # PARTICULAR PURPOSE.
 
 @SET_MAKE@
-
 VPATH = @srcdir@
 pkgdatadir = $(datadir)/@PACKAGE@
 pkgincludedir = $(includedir)/@PACKAGE@
@@ -74,29 +73,6 @@ RECURSIVE_TARGETS = all-recursive check-recursive dvi-recursive \
 	install-pdf-recursive install-ps-recursive install-recursive \
 	installcheck-recursive installdirs-recursive pdf-recursive \
 	ps-recursive uninstall-recursive
-am__vpath_adj_setup = srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`;
-am__vpath_adj = case $$p in \
-    $(srcdir)/*) f=`echo "$$p" | sed "s|^$$srcdirstrip/||"`;; \
-    *) f=$$p;; \
-  esac;
-am__strip_dir = f=`echo $$p | sed -e 's|^.*/||'`;
-am__install_max = 40
-am__nobase_strip_setup = \
-  srcdirstrip=`echo "$(srcdir)" | sed 's/[].[^$$\\*|]/\\\\&/g'`
-am__nobase_strip = \
-  for p in $$list; do echo "$$p"; done | sed -e "s|$$srcdirstrip/||"
-am__nobase_list = $(am__nobase_strip_setup); \
-  for p in $$list; do echo "$$p $$p"; done | \
-  sed "s| $$srcdirstrip/| |;"' / .*\//!s/ .*/ ./; s,\( .*\)/[^/]*$$,\1,' | \
-  $(AWK) 'BEGIN { files["."] = "" } { files[$$2] = files[$$2] " " $$1; \
-    if (++n[$$2] == $(am__install_max)) \
-      { print $$2, files[$$2]; n[$$2] = 0; files[$$2] = "" } } \
-    END { for (dir in files) print dir, files[dir] }'
-am__base_list = \
-  sed '$$!N;$$!N;$$!N;$$!N;$$!N;$$!N;$$!N;s/\n/ /g' | \
-  sed '$$!N;$$!N;$$!N;$$!N;s/\n/ /g'
-am__installdirs = "$(DESTDIR)$(pixmapsdir)"
-DATA = $(pixmaps_DATA)
 RECURSIVE_CLEAN_TARGETS = mostlyclean-recursive clean-recursive	\
   distclean-recursive maintainer-clean-recursive
 AM_RECURSIVE_TARGETS = $(RECURSIVE_TARGETS:-recursive=) \
@@ -307,32 +283,7 @@ EXTRA_DIST = \
 ABOUT-NLS \
 config.rpath \
 gettext.h \
-m4/ChangeLog \
-pixmaps/blockemicon.ico    \
-pixmaps/blockemlogo128.png \
-pixmaps/blockemlogo16.png  \
-pixmaps/blockemlogo32.xpm  \
-pixmaps/blockemlogo48.png  \
-pixmaps/blockemlogo.png    \
-pixmaps/game1vs1.png       \
-pixmaps/gametotalalloc.png
-
-
-# Note pixmapsdir contains @PACKAGE@. This must be taken into account
-# by the binary sources (see gui_glade_defs.h)
-pixmapsdir = $(datadir)/@PACKAGE@/pixmaps
-
-# note that 'pixmaps/' must be added in front because it is the directory
-# where these files are stored (relative path from the root of the package)
-pixmaps_DATA = \
-pixmaps/blockemicon.ico    \
-pixmaps/blockemlogo128.png \
-pixmaps/blockemlogo16.png  \
-pixmaps/blockemlogo32.xpm  \
-pixmaps/blockemlogo48.png  \
-pixmaps/blockemlogo.png    \
-pixmaps/game1vs1.png       \
-pixmaps/gametotalalloc.png
+m4/ChangeLog 
 
 ACLOCAL_AMFLAGS = -I m4
 all: config.h
@@ -392,26 +343,6 @@ distclean-hdr:
 	-rm -f config.h stamp-h1
 intl/Makefile: $(top_builddir)/config.status $(top_srcdir)/intl/Makefile.in
 	cd $(top_builddir) && $(SHELL) ./config.status $@
-install-pixmapsDATA: $(pixmaps_DATA)
-	@$(NORMAL_INSTALL)
-	test -z "$(pixmapsdir)" || $(MKDIR_P) "$(DESTDIR)$(pixmapsdir)"
-	@list='$(pixmaps_DATA)'; test -n "$(pixmapsdir)" || list=; \
-	for p in $$list; do \
-	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
-	  echo "$$d$$p"; \
-	done | $(am__base_list) | \
-	while read files; do \
-	  echo " $(INSTALL_DATA) $$files '$(DESTDIR)$(pixmapsdir)'"; \
-	  $(INSTALL_DATA) $$files "$(DESTDIR)$(pixmapsdir)" || exit $$?; \
-	done
-
-uninstall-pixmapsDATA:
-	@$(NORMAL_UNINSTALL)
-	@list='$(pixmaps_DATA)'; test -n "$(pixmapsdir)" || list=; \
-	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
-	test -n "$$files" || exit 0; \
-	echo " ( cd '$(DESTDIR)$(pixmapsdir)' && rm -f" $$files ")"; \
-	cd "$(DESTDIR)$(pixmapsdir)" && rm -f $$files
 
 # This directory's subdirectories are mostly independent; you can cd
 # into them and run `make' without going through this Makefile.
@@ -726,12 +657,9 @@ distcleancheck: distclean
 	       exit 1; } >&2
 check-am: all-am
 check: check-recursive
-all-am: Makefile $(DATA) config.h
+all-am: Makefile config.h
 installdirs: installdirs-recursive
 installdirs-am:
-	for dir in "$(DESTDIR)$(pixmapsdir)"; do \
-	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
-	done
 install: install-recursive
 install-exec: install-exec-recursive
 install-data: install-data-recursive
@@ -778,7 +706,7 @@ info: info-recursive
 
 info-am:
 
-install-data-am: install-pixmapsDATA
+install-data-am:
 
 install-dvi: install-dvi-recursive
 
@@ -824,7 +752,7 @@ ps: ps-recursive
 
 ps-am:
 
-uninstall-am: uninstall-pixmapsDATA
+uninstall-am:
 
 .MAKE: $(RECURSIVE_CLEAN_TARGETS) $(RECURSIVE_TARGETS) all \
 	ctags-recursive install-am install-strip tags-recursive
@@ -839,11 +767,10 @@ uninstall-am: uninstall-pixmapsDATA
 	install-data-am install-dvi install-dvi-am install-exec \
 	install-exec-am install-html install-html-am install-info \
 	install-info-am install-man install-pdf install-pdf-am \
-	install-pixmapsDATA install-ps install-ps-am install-strip \
-	installcheck installcheck-am installdirs installdirs-am \
-	maintainer-clean maintainer-clean-generic mostlyclean \
-	mostlyclean-generic pdf pdf-am ps ps-am tags tags-recursive \
-	uninstall uninstall-am uninstall-pixmapsDATA
+	install-ps install-ps-am install-strip installcheck \
+	installcheck-am installdirs installdirs-am maintainer-clean \
+	maintainer-clean-generic mostlyclean mostlyclean-generic pdf \
+	pdf-am ps ps-am tags tags-recursive uninstall uninstall-am
 
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
