--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,7 @@ AC_PREREQ([2.65])
 
 m4_define([MAJOR_VERSION], 0)
 m4_define([MINOR_VERSION], 3)
-m4_define([MICRO_VERSION], 0)
+m4_define([MICRO_VERSION], 1)
 m4_define([BLOCKEM_PACKAGE_NAME], [blockem])
 
 define([svnversion], esyscmd([sh -c "svnversion|tr -d '\n'"]))
@@ -182,4 +182,6 @@ Makefile
 src/Makefile
 src/tests/Makefile
 doc/Makefile
+pixmaps/Makefile
+challenges/Makefile
 ])
