trying to get pixmaps and challenges installed when running 'make install'

--- a/pixmaps/Makefile.am
+++ b/pixmaps/Makefile.am
@@ -1,14 +1,4 @@
-EXTRA_DIST = \
-\
-blockemicon.ico    \
-blockemlogo128.png \
-blockemlogo16.png  \
-blockemlogo32.xpm  \
-blockemlogo48.png  \
-blockemlogo.png    \
-game1vs1.png       \
-gametotalalloc.png \
-gamechallenge.png
+EXTRA_DIST= 
 
 # Note pixmapsdir contains @PACKAGE@. This must be taken into account
 # by the binary sources (see gui_glade_defs.h)
@@ -17,11 +7,11 @@ pixmapsdir = $(datadir)/@PACKAGE@/pixmaps
 # note that 'pixmaps/' must be added in front because it is the directory
 # where these files are stored (relative path from the root of the package)
 pixmaps_DATA = \
-blockemicon.ico    \
-blockemlogo128.png \
-blockemlogo16.png  \
-blockemlogo32.xpm  \
-blockemlogo48.png  \
-blockemlogo.png    \
-game1vs1.png       \
-gametotalalloc.png
+    blockemicon.ico    \
+    blockemlogo128.png \
+    blockemlogo16.png  \
+    blockemlogo32.xpm  \
+    blockemlogo48.png  \
+    blockemlogo.png    \
+    game1vs1.png       \
+    gametotalalloc.png
