Makefile.am added to challenges and pixmaps dirs

--- a/Makefile.in
+++ b/Makefile.in
@@ -276,7 +276,7 @@ top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign
 # SUBDIRS = src doc examples man scripts
 # add intl if AM_GNU_GETTEXT is used in configure.ac
-SUBDIRS = intl po src src/tests doc
+SUBDIRS = intl po src src/tests doc pixmaps challenges
 
 # other stuff to be distributed without compiling
 EXTRA_DIST = \
