--- a/challenges/Makefile.in
+++ b/challenges/Makefile.in
@@ -242,21 +242,21 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 EXTRA_DIST = \
-example_challenge.xml  \
-example_challenge2.xml \
-example_challenge3.xml
+	README  \
+    blockem_challenge.dtd  \
+    example_challenge.xml  \
+    example_challenge2.xml \
+    example_challenge3.xml
 
 
 # Note pixmapsdir contains @PACKAGE@. This must be taken into account
 # by the binary sources (see gui_glade_defs.h)
 challengesdir = $(datadir)/@PACKAGE@/challenges
-
-# note that 'pixmaps/' must be added in front because it is the directory
-# where these files are stored (relative path from the root of the package)
 challenges_DATA = \
-example_challenge.xml  \
-example_challenge2.xml \
-example_challenge3.xml
+    blockem_challenge.dtd  \
+    example_challenge.xml  \
+    example_challenge2.xml \
+    example_challenge3.xml
 
 all: all-am
 
