--- a/pixmaps/Makefile.am
+++ b/pixmaps/Makefile.am
@@ -1,4 +1,12 @@
-EXTRA_DIST= 
+EXTRA_DIST= \
+    blockemicon.ico    \
+    blockemlogo128.png \
+    blockemlogo16.png  \
+    blockemlogo32.xpm  \
+    blockemlogo48.png  \
+    blockemlogo.png    \
+    game1vs1.png       \
+    gametotalalloc.png
 
 # Note pixmapsdir contains @PACKAGE@. This must be taken into account
 # by the binary sources (see gui_glade_defs.h)
