--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 AUTOMAKE_OPTIONS = foreign
 # SUBDIRS = src doc examples man scripts
 # add intl if AM_GNU_GETTEXT is used in configure.ac
-SUBDIRS = intl po src src/tests doc
+SUBDIRS = intl po src src/tests doc pixmaps challenges
 
 # other stuff to be distributed without compiling
 EXTRA_DIST = \
