--- a/pixmaps/Makefile.in
+++ b/pixmaps/Makefile.in
@@ -249,7 +249,8 @@ EXTRA_DIST = \
     blockemlogo48.png  \
     blockemlogo.png    \
     game1vs1.png       \
-    gametotalalloc.png
+    gametotalalloc.png \
+    gamechallenge.png
 
 
 # Note pixmapsdir contains @PACKAGE@. This must be taken into account
@@ -266,7 +267,8 @@ pixmaps_DATA = \
     blockemlogo48.png  \
     blockemlogo.png    \
     game1vs1.png       \
-    gametotalalloc.png
+    gametotalalloc.png \
+    gamechallenge.png
 
 all: all-am
 
