--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -2,6 +2,7 @@
 # so far it contains all source files but the ones for testing
 
 src/impl/board_impl.h 
+src/impl/coordinate_impl.h
 src/impl/g_blocking_queue_impl.h 
 src/impl/game1v1_impl.h 
 src/impl/piece_impl.h 
@@ -23,8 +24,8 @@ src/game_challenge.h
 src/game_total_allocation.cpp 
 src/game_total_allocation.h 
 src/g_blocking_queue.h
-src/gui_about_dialog.cpp 
-src/gui_about_dialog.h 
+src/gui_dialog_about.cpp 
+src/gui_dialog_about.h 
 src/gui_dialog_newgame.cpp
 src/gui_dialog_newgame.h
 src/gui_drawing_area_board.h 
